--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "chalk": "^5.2.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
