--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "chalk": "^5.2.0",
+    "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
