--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
